# magic-admin-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: pre-commit.yml  python-publish.yml  test.yml  w_builder_base.yaml
magic_admin/: __init__.py  config.py  error.py  http_client.py  magic.py  response.py
magic_admin/django/: config.py  exceptions.py  utils.py
magic_admin/django/auth/: backends.py  middleware.py  models.py
magic_admin/resources/: __init__.py  api.py  base.py  mint.py  nft.py  token.py  user.py  utils.py  wallet.py
magic_admin/utils/: did_token.py  http.py  logging.py  time.py
magic_sdk/: __init__.py
magic_sdk/resources/: __init__.py  token.py  user.py
testing/data/: did_token.py
tests/integration/: magic_test.py
tests/integration/resources/: token_test.py
tests/unit/: config_test.py  error_test.py  http_client_test.py  magic_test.py  response_test.py
tests/unit/resources/: api_test.py  base_test.py  mint_test.py  nft_test.py  token_test.py  user_test.py
tests/unit/utils/: did_token_test.py  http_test.py  time_test.py
